--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   webview_flutter_wkwebview: ^3.10.0
   flutter_inappwebview: ^6.0.0
   permission_handler: ^12.0.0+1
+  image_picker: ^1.0.7
+  
 
 dev_dependencies:
   flutter_test:
@@ -24,10 +26,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/logo.png
-    - assets/images/map_placeholder.png
-    - assets/images/hazard_map.png
-    - assets/images/legend.png
+    - assets/images/
     - assets/qgis_map/
     - assets/qgis_map/css/
     - assets/qgis_map/js/
